<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>coding.architecture.style</groupId>
        <artifactId>cinema</artifactId>
        <version>1.0-SNAPSHOT</version>
    </parent>

    <artifactId>users</artifactId>

    <properties>
        <maven.compiler.source>23</maven.compiler.source>
        <maven.compiler.target>23</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>coding.architecture.style</groupId>
            <artifactId>common</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>

        <dependency>
            <groupId>coding.architecture.style</groupId>
            <artifactId>publisher</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>

        <!-- Derby DB -->
        <dependency>
            <groupId>org.apache.derby</groupId>
            <artifactId>derby</artifactId>
        </dependency>

        <dependency>
            <groupId>org.apache.derby</groupId>
            <artifactId>derbytools</artifactId>
        </dependency>

        <dependency>
            <groupId>org.apache.derby</groupId>
            <artifactId>derbyclient</artifactId>
        </dependency>

        <!-- Hiberate -->
        <dependency>
            <groupId>org.hibernate.orm</groupId>
            <artifactId>hibernate-core</artifactId>
        </dependency>

        <dependency>
            <groupId>org.hibernate.orm</groupId>
            <artifactId>hibernate-community-dialects</artifactId>
        </dependency>

        <!-- Lombok -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
        </dependency>

        <!-- Encrypt -->
        <dependency>
            <groupId>at.favre.lib</groupId>
            <artifactId>bcrypt</artifactId>
            <version>0.9.0</version>
        </dependency>

        <!-- Paceto -->
        <dependency>
            <groupId>dev.paseto</groupId>
            <artifactId>jpaseto-api</artifactId>
            <version>0.7.0</version>
        </dependency>

        <dependency>
            <groupId>dev.paseto</groupId>
            <artifactId>jpaseto-impl</artifactId>
            <version>0.7.0</version>
            <scope>runtime</scope>
        </dependency>

        <dependency>
            <groupId>dev.paseto</groupId>
            <artifactId>jpaseto-jackson</artifactId>
            <version>0.7.0</version>
            <scope>runtime</scope>
        </dependency>

        <dependency>
            <groupId>dev.paseto</groupId>
            <artifactId>jpaseto-sodium</artifactId>
            <version>0.6.0</version>
            <scope>runtime</scope>
        </dependency>

        <!-- tests -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
        </dependency>
    </dependencies>
</project>